# pysteamgear

./: .pylintrc  LICENSE  Makefile  README.md  requirements-dev.txt  setup.cfg  setup.py  test.json  testfile.py
pysteamgear/: __init__.py  http_client.py  steam.py  steam_api.py
pysteamgear/auth/: auth.py  steam_id.py
pysteamgear/core/: crypto.py
pysteamgear/exceptions/: __init__.py  auth_exceptions.py
pysteamgear/helpers/: __init__.py  item_collecter.py
pysteamgear/modules/: __init__.py  steam_data.py
pysteamgear/steam_interfaces/: __init__.py  steam_news.py  steam_store.py
pysteamgear/utils/: web.py
