[metadata]
author = 2brackets,com
author_email = info@2brackets.com
description = Python library for intuitive interaction with the Steam API.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
keywords = steam, api, game, games

[options]
install_requires =
    requests
    vdf
    xmltodict

